# xclimate

./: .gitignore  pyproject.toml
dicts/: fhist_members.yml
src/xclimate/: __init__.py  binned_mean.py  daskhelper.py  load.py  multiple_testing.py  pfts.py  ppe.py  regression.py  time_coord.py
src/xclimate/plot/: __init__.py  ensemble.py  facetgrid_line.py  facetgrid_map.py  helpers.py  zonal_violin.py
